tests/testcases/errors/BCE0024-1.boo
"""
BCE0024-1.boo(10,13): BCE0024: The type 'Person' does not have a visible constructor that matches the argument list '(int)'.
"""
class Person:
	def constructor():
		pass
	def constructor(name as string):
		pass

print(Person(3))
